[tool.poetry]
name = "pecten"
version = "0.9.0"
description = "aspect-oriented extension to C"
authors = ["Ikuya Nagaki"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.scripts]
pecten = "src.translator:main"

[tool.poetry.dependencies]
python = "^3.8"
pycparser = "^2.21"
lark = "^1.1.8"
pycparser-fake-libc = "^2.21"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.4"

[tool.poe.tasks]
pecten.script = "src.translator:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
