[tool.poetry]
name = "pecten"
version = "0.9.0"
description = "aspect-oriented extension to C"
authors = ["Ikuya Nagaki"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.scripts]
pecten = "src.translator:main"

[tool.poetry.dependencies]
python = "^3.8"
pycparser = "^2.21"
lark = "^1.1.8"
pycparser-fake-libc = "^2.21"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.4"

[tool.poe.tasks.pecten]
ref = "_exec_pecten"
uses = { path = "_path" }

[tool.poe.tasks.run]
ref = "_exec_py"
env = { filenames = "${filenames}" }
uses = { path = "_path" }
args = [{ name = "filenames", positional = true, multiple = true }]

[tool.poe.tasks._path]
cmd = "pwd"

[tool.poe.tasks._exec_pecten]
script = "src.translator:main()"
env = { PYTHONPATH = "${path}" }
cwd = "${POE_PWD}"

[tool.poe.tasks._exec_py]
cmd = "python ${filenames}"
env = { PYTHONPATH = "${path}" }
cwd = "${POE_PWD}"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
